 -- Prevent jobs from being scheduled on future nodes.
 -- Fix memory leak in slurmd happening on reconfigure when CPUSpecList used.
 -- Fix sacctmgr show event [min|max]cpus.
 -- Fix regression in 22.05.0rc1 where a prolog or epilog that redirected stdout
    to a file could get erroneously killed, resulting in job launch failure
    (for the prolog) and the node being drained.

* Changes in Slurm 22.05.3
==========================
 -- job_container/tmpfs - cleanup containers even when the .ns file isn't
    mounted anymore.
 -- Ignore the bf_licenses option if using sched/builtin.
 -- Do not clear the job's requested QOS (qos_id) when ineligible due to QOS.
 -- Emit error and add fail-safe when job's qos_id changes unexpectedly.
 -- Fix timeout value in log.
 -- openapi/v0.0.38 - fix setting of DefaultTime when dumping a partition.
 -- openapi/dbv0.0.38 - correct parsing association QOS field.
 -- Fix LaunchParameters=mpir_use_nodeaddr.
 -- Fix various edge cases where accrue limits could be exceeded or cause
    underflow error messages.
 -- Fix issue where a job requesting --ntasks and --nodes could be wrongly
    rejected when spanning heterogeneous nodes.
 -- openapi/v0.0.38 - detect when partition PreemptMode is disabled
 -- openapi/v0.0.38 - add QOS flag to handle partition PreemptMode=within
 -- Add total_cpus and total_nodes values to the partition list in
    the job_submit/lua plugin.
 -- openapi/dbv0.0.38 - reject and error on invalid flag values in well defined
    flag fields.
 -- openapi/dbv0.0.38 - correct QOS preempt_mode flag requests being silently
    ignored.
 -- accounting_storage/mysql - allow QOS preempt_mode flag updates when GANG
    mode is requested.
 -- openapi/dbv0.0.38 - correct QOS flag modifications request being silently
    ignored.
 -- sacct/sinfo/squeue - use openapi/[db]v0.0.38 for --json and --yaml modes.
 -- Improve error messages when using configless and fetching the config fails.